update localization file to include more records

--- a/src/EmployeeService.API/appsettings.json
+++ b/src/EmployeeService.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=Employee;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=EmployeeService;Trusted_Connection=True;MultipleActiveResultSets=true"
 
   },
   "AllowedHosts": "*"
