--- a/src/EmployeeService.Application/EmployeeService.Application.csproj
+++ b/src/EmployeeService.Application/EmployeeService.Application.csproj
@@ -7,16 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Queries\Positions\**" />
+    <EmbeddedResource Remove="Queries\Positions\**" />
+    <None Remove="Queries\Positions\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="11.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\EmployeeService.Domain\EmployeeService.Domain.csproj" />
     <ProjectReference Include="..\EmployeeService.Infrastructure\EmployeeService.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Queries\Positions\" />
   </ItemGroup>
 
 </Project>
